# SoundBox_ACM8625_STM32G431

MCU/soundbox/: .gitignore  .mxproject  CMakeLists.txt  CMakePresets.json  minimal_cmsis_test.c  simple_test.c  soundbox.ioc
MCU/soundbox/Core/Inc/: main.h  stm32g4xx_hal_conf.h  stm32g4xx_it.h
MCU/soundbox/Core/Src/: gpio.c  i2c.c  main.c  sai.c  stm32g4xx_hal_msp.c  stm32g4xx_it.c
MCU/soundbox/Middlewares/ST/STM32_USB_Device_Library/Class/AUDIO/Inc/: usbd_audio.h
MCU/soundbox/Middlewares/ST/STM32_USB_Device_Library/Class/AUDIO/Src/: usbd_audio.c
MCU/soundbox/Module/armdsp/: README.md
MCU/soundbox/Module/armdsp/Source/: CMakeLists.txt  OptimizeDSP.cmake
MCU/soundbox/USB_Device/App/: usb_device.c  usbd_audio_if.c  usbd_audio_if.h  usbd_desc.c  usbd_desc.h
MCU/soundbox/cmake/: starm-clang.cmake
MCU/soundbox/cmake/stm32cubemx/: CMakeLists.txt
MCU/soundbox_threadx/: .clangd  .mxproject  CMakeLists.txt  CMakePresets.json  soundbox_threadx.ioc  startup_stm32g431xx.s
MCU/soundbox_threadx/AZURE_RTOS/App/: app_azure_rtos.c
MCU/soundbox_threadx/Core/Inc/: RTE_Components.h  main.h  stm32g4xx_hal_conf.h  stm32g4xx_it.h  tx_user.h
MCU/soundbox_threadx/Core/Src/: app_threadx.c  gpio.c  main.c  stm32g4xx_it.c  tx_initialize_low_level.S  usart.c
MCU/soundbox_threadx/Module/armdsp/: clean_lib.sh
MCU/soundbox_threadx/Module/tinyusb/: CMakeLists.txt
MCU/soundbox_threadx/Module/tinyusb/bsp/: board.c  board.h  board_port.c  family.c
MCU/soundbox_threadx/Module/tinyusb/src/: CMakeLists.txt
MCU/soundbox_threadx/Module/tinyusb/src/common/: tusb_debug.h
MCU/soundbox_threadx/Module/tinyusb/user/: audio.c  audio_app.h  tinyusb_app.c  tinyusb_app.h  tusb_config.h  tusb_os_custom.h  usb_descriptors.c
MCU/soundbox_threadx/cmake/stm32cubemx/: CMakeLists.txt
